# chariot-ecosystem

./: .dockerignore  .env.azure  .env.azure.template  .env.clean  .env.example  .gitignore  README.md  __.SYMDEF SORTED  chariot-ssd.code-workspace  dev-local-ssd.sh  docker-compose.azure.yml  docker-compose.cross-platform.yml  docker-compose.dev.yml  docker-compose.letsencrypt.yml  docker-compose.oauth2.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  migrate-to-monorepo.sh  nginx-azure-auth.conf  setup-letsencrypt-vm.sh  sync-to-jetson.sh  test-results.txt
.github/: copilot-instructions.md
databases/couchbase/: init.sh
databases/mysql/: init.sql  my-main.cnf  my.cnf
docs/: ATTRIBUTIONS.md  ArrayFunctions.md  BDIAgentFunctions.md  BUILD_QUICK_REFERENCE.md  CROSS_PLATFORM_BUILDS.md  Chariot Advanced Projects.md  ChariotLanguageDesign.md  ComparisionFunctions.md  CouchbaseFunctions.md  CryptoFunctions.md  DEBUGGER_IMPLEMENTATION.md  ETLFunctions.md  Example: Agent Handlers Node.md  FileFunctions.md  KNAPSACK_INTEGRATION_COMPLETE.md  MIGRATION_PLAN.md  MathFunctions.md  SecretManagement.md  SourcecodeDebugger.md  SystemFunctions.md  TreeFunctions.md  ValueFunctions.md  nginx-mysql.md  nginx-notes.md  sample-go-chariot-dockerfile.txt  sample-visual-dsl-dockerfile.txt  todo.md
docs/notes/: CROSS_PLATFORM_BUILDS.md  Chariot Decision Agent v1.1.md  Chariot in VS Code.md  ChariotPlanExtensions.md  ChatErrorTroubleshooting.md  GOPLS_CGO_MULTIPLATFORM.md  HEALTHCHECKS.md  JSON-RPC-NSQ-Examples.md  JSON-RPC-vs-NSQ.md  KNAPSACK_ACTION_PLAN.md  KNAPSACK_BUILD_FIX.md  KNAPSACK_INTEGRATION_STATUS.md  KNAPSACK_V2_SCHEMA_NEEDED.md  KnapSackGoTests.go  KnapSackPythonTests.py  KnapsackTestsReadMe.md  PersistentAgentActionPlan.md  PersistentAgentsPlan-v2.md  PlanAgentConcurrency.md  PrePaidCards.md  SSE_Charioteer_Proxy_Fix.md  SSE_Debugging_No_Logs.md  SSE_Integration_Complete.md  SSE_LOG_STREAMING.md  StreamingLogs.md  WIP Chariot Lang Ref .md  crypto_test_fixes_summary.md
docs/snippets/: nginx-ws-agents.conf  ws-agents-test.html
examples/mcp/: client.example.json
infrastructure/docker/charioteer/: Dockerfile  Dockerfile.azure
infrastructure/docker/go-chariot/: Dockerfile  Dockerfile.azure  Dockerfile.build  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.minimal  Dockerfile.simple  entrypoint-minimal.sh
infrastructure/docker/nginx/: Dockerfile  Dockerfile.azure  landing.html  nginx.azure.conf  nginx.conf  nginx.conf.backup
infrastructure/docker/oauth2-proxy/: authenticated-emails.txt
infrastructure/docker/visual-dsl/: Dockerfile  Dockerfile.azure  Dockerfile.dev  Dockerfile.nginx  Dockerfile.simple  Dockerfile.static  nginx-dev.conf  nginx-http.conf  nginx-simple.conf  nginx.conf
scripts/: build-all.sh  build-azure-cross-platform.sh  build-image-nocache.sh  build-nginx-nocache.sh  check-services.sh  deploy-azure-aci.sh  deploy-azure-vm.sh  deploy-azure.sh  dev-start.sh  docker-build-all.sh  open-firewall-ports.sh  push-images.sh  run-mcp-stdio.sh  setup-azure-ad-app.sh  setup-azure-gateway-auth.sh  setup-letsencrypt.sh  test-cross-platform.sh
services/charioteer/: Dockerfile  Makefile  README.md  entrypoint.sh  generate-ssl.sh  go.mod  main.go
services/charioteer/.certs/: .gitkeep
services/charioteer/docs/: AgentTemplatePrograms.md  AgentsTab.md
services/charioteer/files/: addUsersToUsersAgent.ch  applyTest.ch  cas_preservation.ch  createFantasyIsland.ch  createUsersAgent.ch  decisionAgent1.ch  decision_agent.ch  decision_test.ch  etlFan47K.ch  etlImportFan47K.ch  etlMakeMaps.ch  execute_ETL.ch  loadAndExecute.ch  loadUsersAgentGOB.ch  mapTest.ch  merge_test.ch  populateRoles.ch  runUserAgentsRuleTest.ch  switch_test.ch  test_function_var.ch  treeFind.ch  treeSearch.ch  treewalk.ch  userCountTest.ch  user_list.ch  usersAgent.ch
services/go-chariot/: Dockerfile  README.md  VENDORED_KNAPSACK.md  build.sh  debug-delve.sh  debug-env.sh  docker-build.sh  docker-compose.yml  docker-deploy.sh  entrypoint-minimal.sh  entrypoint.sh  generate-ssl.sh  go.mod  go.sum  gopls.toml  run-dev.sh  run-local.sh  test-results.txt  test-sse.sh
services/go-chariot/chariot/: array_funcs.go  ast.go  ast_deserialize.go  auth_funcs.go  cgo_guard.go  collections.go  compare_funcs.go  crypto.go  (+66 more)
services/go-chariot/knapsack-library/: CMakeLists.txt  README.md
services/go-chariot/knapsack-library/build-metal/: CMakeCache.txt  Makefile  cmake_install.cmake
services/go-chariot/knapsack-library/lib/: README.md
services/go-chariot/knapsack-library/lib/linux-cpu/: rl_api.h
services/go-chariot/knapsack-library/lib/macos-cpu/: knapsack_macos_cpu.h  librl_support.dylib
services/go-chariot/knapsack-library/lib/macos-metal/: librl_support.dylib
services/go-chariot/knapsack-library/src/: cli_v2.cpp  knapsack_c.cpp  knapsack_solve.cpp  knapsack_v2.cpp  metal_bridge.mm
services/visual-dsl/: index.html  landing.html  nginx-http.conf  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
(+284 files in other folders)
